Firefox UX style fixes for thin scrollbar and quest tracker scrollbar color with transparent background.

--- a/styles/quest-log.scss
+++ b/styles/quest-log.scss
@@ -103,6 +103,9 @@
     .table {
       flex: 1;
       overflow-y: auto;
+
+      // For Firefox.
+      scrollbar-width: thin;
     }
   }
 
